[tool.poetry]
name = "private-code-review-bot"
version = "0.1.0"
description = ""
authors = ["Dongyeon1201 <dongyeon1201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
pycln = "^2.4.0"
langchain = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
